# Messenger

./: Dockerfile
messenger/: Dockerfile  README.md
messenger/client/: app.js  index.html  manifest.json  style.css  sw.js
messenger/server/: Cargo.toml
messenger/server/src/: db.rs  main.rs
