[package]
name = "messenger-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures-util = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
chrono = "0.4"
anyhow = "1"
bcrypt = "0.15"
web-push = "0.10"
